[gd_scene load_steps=10 format=3 uid="uid://d1jdun1b61cjp"]

[ext_resource type="Script" path="res://Scenes/World.gd" id="1_i0ao4"]
[ext_resource type="PackedScene" uid="uid://b5iy5pcb2xit3" path="res://Scenes/Paddle.tscn" id="1_lert0"]
[ext_resource type="Texture2D" uid="uid://bx2dcegbutm0j" path="res://B).png" id="2_cqfwg"]
[ext_resource type="PackedScene" uid="uid://be80dbp2b6dxv" path="res://Scenes/Ball.tscn" id="3_62d1g"]
[ext_resource type="Script" path="res://Scenes/Enemy.gd" id="4_sx57s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vdgs"]
size = Vector2(1184, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22hlc"]
size = Vector2(1184, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kfys"]
size = Vector2(16, 680)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0adeh"]
size = Vector2(16, 680)

[node name="World" type="Node"]
script = ExtResource("1_i0ao4")

[node name="Top" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_5vdgs")

[node name="StaticBody2D" type="StaticBody2D" parent="Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top/StaticBody2D"]
position = Vector2(576, -12)
shape = SubResource("RectangleShape2D_5vdgs")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 664)
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_22hlc")

[node name="StaticBody2D" type="StaticBody2D" parent="Bottom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom/StaticBody2D"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_22hlc")

[node name="Left" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-8, 324)
shape = SubResource("RectangleShape2D_1kfys")

[node name="Right" type="Area2D" parent="."]
position = Vector2(1152, 0)
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(8, 324)
shape = SubResource("RectangleShape2D_0adeh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="Control"]
z_index = -10
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_cqfwg")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 184.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "x 5"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 56.0
texture = ExtResource("2_cqfwg")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Control"]
visible = false
z_index = 10
layout_mode = 0
offset_left = 320.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 60
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 448.0
offset_top = 384.0
offset_right = 704.0
offset_bottom = 448.0
text = "PLAY AGAIN"

[node name="MainMenu" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 448.0
offset_top = 456.0
offset_right = 704.0
offset_bottom = 520.0
text = "MAIN MENU"

[node name="Player" parent="." instance=ExtResource("1_lert0")]
position = Vector2(72, 320)
collision_layer = 5
collision_mask = 5

[node name="Enemy" parent="." groups=["enemies"] instance=ExtResource("1_lert0")]
position = Vector2(1080, 576)
collision_layer = 5
collision_mask = 5
script = ExtResource("4_sx57s")
speed = 350.0

[node name="Enemy2" parent="." instance=ExtResource("1_lert0")]
position = Vector2(1048, 72)
collision_layer = 5
collision_mask = 5
script = ExtResource("4_sx57s")
speed = 350.0

[node name="Ball" parent="." instance=ExtResource("3_62d1g")]
position = Vector2(576, 320)

[connection signal="pauseSignal" from="." to="Player" method="_on_world_pause_signal"]
[connection signal="pauseSignal" from="." to="Enemy" method="_on_world_pause_signal"]
[connection signal="pauseSignal" from="." to="Enemy2" method="_on_world_pause_signal"]
[connection signal="pauseSignal" from="." to="Ball" method="_on_world_pause_signal"]
[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Left" to="Enemy" method="_on_success"]
[connection signal="body_entered" from="Left" to="Enemy2" method="_on_success"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="Right" to="Enemy" method="_on_fail"]
[connection signal="body_entered" from="Right" to="Enemy2" method="_on_fail"]
[connection signal="pressed" from="Control/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="die_signal" from="Enemy" to="." method="_on_enemy_die_signal"]
[connection signal="spawn_signal" from="Enemy" to="." method="_on_enemy_spawn_signal"]
[connection signal="die_signal" from="Enemy2" to="." method="_on_enemy_die_signal"]
[connection signal="spawn_signal" from="Enemy2" to="." method="_on_enemy_spawn_signal"]
